ecmascript/parser/tests/jsx/errors/attributes-in-fragment/input.js.stderr
error: Unexpected token Some(AssignOp("="))
 --> $DIR/tests/jsx/errors/attributes-in-fragment/input.js:1:6
  |
1 | < key="nope"></>
  |      ^

